--- a/hadoop.env
+++ b/hadoop.env
@@ -1,24 +1,24 @@
-# None-changable
-HADOOP_NAMENODE_PORT=9000
-HADOOP_NAMENODE_WEBUI_PORT=9870
-HADOOP_DATANODE_PORT=9864
-HADOOP_RESOURCEMANAGER_PORT=8088
-HADOOP_NODEMANAGER_PORT=8042
-HADOOP_HISTORYSERVER_PORT=8188
-
+# core-site.xml
 CORE_CONF_fs_defaultFS=hdfs://hadoop-namenode:9000
 CORE_CONF_hadoop_proxyuser_hue_hosts=*
 CORE_CONF_hadoop_proxyuser_hue_groups=*
 CORE_CONF_io_compression_codecs=org.apache.hadoop.io.compress.GzipCodec
 CORE_CONF_tmp_dir=/hadoop/tmp
-
+# hdfs-site.xml
 HDFS_CONF_dfs_replication=1
 HDFS_CONF_dfs_blocksize=134217728
 HDFS_CONF_dfs_permissions_enabled=false
 HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check=false
-HDFS_CONF_dfs_path=/hadoop/dfs
+HDFS_CONF_dfs_namenode_name_dir=file:///hadoop/dfs/namenode
+HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/datanode
 HDFS_CONF_dfs_namenode_safemode_extension=500
-
+HDFS_CONF_dfs_namenode_rpc___bind___host=0.0.0.0
+HDFS_CONF_dfs_namenode_servicerpc___bind___host=0.0.0.0
+HDFS_CONF_dfs_namenode_http___bind___host=0.0.0.0
+HDFS_CONF_dfs_namenode_https___bind___host=0.0.0.0
+HDFS_CONF_dfs_client_use_datanode_hostname=true
+HDFS_CONF_dfs_datanode_use_datanode_hostname=true
+# yarn-site.xml
 YARN_CONF_yarn_log___aggregation___enable=true
 YARN_CONF_yarn_log_server_url=http://hadoop-historyserver:8188/applicationhistory/logs/
 YARN_CONF_yarn_resourcemanager_recovery_enabled=true
@@ -43,10 +43,19 @@ YARN_CONF_yarn_nodemanager_resource_cpu___vcores=-1
 YARN_CONF_yarn_nodemanager_disk___health___checker_max___disk___utilization___per___disk___percentage=98.5
 YARN_CONF_yarn_nodemanager_aux___services=mapreduce_shuffle
 YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path=/hadoop/yarn/timeline
-
+YARN_CONF_yarn_resourcemanager_bind___host=0.0.0.0
+YARN_CONF_yarn_nodemanager_bind___host=0.0.0.0
+YARN_CONF_yarn_timeline___service_bind___host=0.0.0.0
+YARN_CONF_yarn_nodemanager_remote___app___log___dir=/tmp/logs
+YARN_CONF_yarn_nodemanager_linux___container___executor_group=hadoop
+# mapred-site.xml
 MAPRED_CONF_mapreduce_framework_name=yarn
 MAPRED_CONF_mapred_child_java_opts=-Xmx4096m
 MAPRED_CONF_mapreduce_map_memory_mb=4096
 MAPRED_CONF_mapreduce_reduce_memory_mb=8192
 MAPRED_CONF_mapreduce_map_java_opts=-Xmx3072m
 MAPRED_CONF_mapreduce_reduce_java_opts=-Xmx6144m
+MAPRED_CONF_yarn_app_mapreduce_am_env="HADOOP_MAPRED_HOME=/opt/hadoop"
+MAPRED_CONF_mapreduce_map_env="HADOOP_MAPRED_HOME=/opt/hadoop"
+MAPRED_CONF_mapreduce_reduce_env="HADOOP_MAPRED_HOME=/opt/hadoop"
+MAPRED_CONF_yarn_nodemanager_bind___host=0.0.0.0
