--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,63 +1,12 @@
 ---
 version: "3.8"
 
-x-args:
-  &args
-
-  CORE_CONF_fs_defaultFS: ${CORE_CONF_fs_defaultFS:-hdfs://hadoop-namenode:9000}
-  CORE_CONF_hadoop_proxyuser_hue_hosts: ${CORE_CONF_hadoop_proxyuser_hue_hosts:-*}
-  CORE_CONF_hadoop_proxyuser_hue_groups: ${CORE_CONF_hadoop_proxyuser_hue_groups:-*}
-  CORE_CONF_io_compression_codecs: ${CORE_CONF_io_compression_codecs:-org.apache.hadoop.io.compress.GzipCodec}
-  CORE_CONF_tmp_dir: ${CORE_CONF_tmp_dir:-/hadoop/tmp}
-
-  HDFS_CONF_dfs_replication: ${HDFS_CONF_dfs_replication:-3}
-  HDFS_CONF_dfs_blocksize: ${HDFS_CONF_dfs_blocksize:-134217728}
-  HDFS_CONF_dfs_permissions_enabled: ${HDFS_CONF_dfs_permissions_enabled:-false}
-  HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check: ${HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check:-false}
-  HDFS_CONF_dfs_path: ${HDFS_CONF_dfs_path:-/hadoop/dfs}
-  HDFS_CONF_dfs_namenode_safemode_extension: ${HDFS_CONF_dfs_namenode_safemode_extension:-30000}
-
-  YARN_CONF_yarn_log___aggregation___enable: ${YARN_CONF_yarn_log___aggregation___enable:-true}
-  YARN_CONF_yarn_log_server_url: ${YARN_CONF_yarn_log_server_url:-http://hadoop-historyserver:8188/applicationhistory/logs/}
-  YARN_CONF_yarn_resourcemanager_recovery_enabled: ${YARN_CONF_yarn_resourcemanager_recovery_enabled:-true}
-  YARN_CONF_yarn_resourcemanager_store_class: ${YARN_CONF_yarn_resourcemanager_store_class:-org.apache.hadoop.yarn.server.resourcemanager.recovery.FileSystemRMStateStore}
-  YARN_CONF_yarn_resourcemanager_scheduler_class: ${YARN_CONF_yarn_resourcemanager_scheduler_class:-org.apache.hadoop.yarn.server.resourcemanager.scheduler.capacity.CapacityScheduler}
-  YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___mb: ${YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___mb:-8192}
-  YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___vcores: ${YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___vcores:-4}
-  YARN_CONF_yarn_resourcemanager_fs_state___store_uri: ${YARN_CONF_yarn_resourcemanager_fs_state___store_uri:-/rmstate}
-  YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled: ${YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled:-true}
-  YARN_CONF_yarn_resourcemanager_hostname: ${YARN_CONF_yarn_resourcemanager_hostname:-hadoop-resourcemanager}
-  YARN_CONF_yarn_resourcemanager_address: ${YARN_CONF_yarn_resourcemanager_address:-hadoop-resourcemanager:8032}
-  YARN_CONF_yarn_resourcemanager_scheduler_address: ${YARN_CONF_yarn_resourcemanager_scheduler_address:-hadoop-resourcemanager:8030}
-  YARN_CONF_yarn_resourcemanager_resource__tracker_address: ${YARN_CONF_yarn_resourcemanager_resource__tracker_address:-hadoop-resourcemanager:8031}
-  YARN_CONF_yarn_timeline___service_enabled: ${YARN_CONF_yarn_timeline___service_enabled:-true}
-  YARN_CONF_yarn_timeline___service_generic___application___history_enabled: ${YARN_CONF_yarn_timeline___service_generic___application___history_enabled:-true}
-  YARN_CONF_yarn_timeline___service_hostname: ${YARN_CONF_yarn_timeline___service_hostname:-hadoop-historyserver}
-  YARN_CONF_mapreduce_map_output_compress: ${YARN_CONF_mapreduce_map_output_compress:-true}
-  YARN_CONF_mapred_map_output_compress_codec: ${YARN_CONF_mapred_map_output_compress_codec:-org.apache.hadoop.io.compress.GzipCodec}
-  YARN_CONF_yarn_nodemanager_resource_detect___hardware___capabilities: ${YARN_CONF_yarn_nodemanager_resource_detect___hardware___capabilities:-true}
-  YARN_CONF_yarn_nodemanager_resource_memory___mb: ${YARN_CONF_yarn_nodemanager_resource_memory___mb:-16384}
-  YARN_CONF_yarn_nodemanager_resource_cpu___vcores: ${YARN_CONF_yarn_nodemanager_resource_cpu___vcores:-8}
-  YARN_CONF_yarn_nodemanager_disk___health___checker_max___disk___utilization___per___disk___percentage: ${YARN_CONF_yarn_nodemanager_disk___health___checker_max___disk___utilization___per___disk___percentage:-98.5}
-  YARN_CONF_yarn_nodemanager_aux___services: ${YARN_CONF_yarn_nodemanager_aux___services:-mapreduce_shuffle}
-  YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path: ${YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path:-/hadoop/yarn/timeline}
-
-  MAPRED_CONF_mapreduce_framework_name: ${MAPRED_CONF_mapreduce_framework_name:-yarn}
-  MAPRED_CONF_mapred_child_java_opts: ${MAPRED_CONF_mapred_child_java_opts:--Xmx4096m}
-  MAPRED_CONF_mapreduce_map_memory_mb: ${MAPRED_CONF_mapreduce_map_memory_mb:-4096}
-  MAPRED_CONF_mapreduce_reduce_memory_mb: ${MAPRED_CONF_mapreduce_reduce_memory_mb:-8192}
-  MAPRED_CONF_mapreduce_map_java_opts: ${MAPRED_CONF_mapreduce_map_java_opts:--Xmx3072m}
-  MAPRED_CONF_mapreduce_reduce_java_opts: ${MAPRED_CONF_mapreduce_reduce_java_opts:--Xmx6144m}
-
 x-hadoop-common:
   &hadoop-common
-  build:
-    context: .
-    dockerfile: main.Dockerfile
-    args: *args
+  image: hadoop-base:3.3.4
   networks:
     - main-overlay-network
-  env_file: ./.env
+  env_file: ./hadoop.env
   restart: always
 
 services:
@@ -65,83 +14,92 @@ services:
   hadoop-namenode:
     <<: *hadoop-common
     container_name: hadoop-namenode
+    command: namenode
     environment:
       - CLUSTER_NAME=main
     ports:
-      - target: ${HADOOP_NAMENODE_PORT:-9000}
+      # HADOOP_NAMENODE_PORT
+      - target: 9000
         published: 9005
         mode: host
-      - target: ${HADOOP_NAMENODE_WEBUI_PORT:-9870}
+      # HADOOP_NAMENODE_WEBUI_PORT
+      - target: 9870
         published: 9870
         mode: host
     volumes:
       - type: bind
         source: /home/${USER}/Apps/hadoop-data/namenode
-        target: ${HDFS_CONF_dfs_path:-/hadoop/dfs}/namenode
+        # HDFS_CONF_dfs_namenode_name_dir
+        target: /hadoop/dfs/namenode
       - type: bind
         source: /home/${USER}/Apps/hadoop-workspace
         target: /workspace
       - type: bind
         source: /home/${USER}/Apps/hadoop-logs
         target: /tmp/logs
-    entrypoint: ["/bin/bash", "/entrypoint/namenode.sh"]
 
   hadoop-datanode:
     <<: *hadoop-common
     container_name: hadoop-datanode
+    command: datanode
     expose:
-      - ${HADOOP_DATANODE_PORT:-9864}
+      # HADOOP_DATANODE_PORT
+      - 9864
     environment:
       SERVICE_PRECONDITION: "hadoop-namenode:9870"
     volumes:
       - type: bind
         source: /home/${USER}/Apps/hadoop-data/datanode
-        target: ${HDFS_CONF_dfs_path:-/hadoop/dfs}/datanode
+        # HDFS_CONF_dfs_datanode_data_dir
+        target: /hadoop/dfs/datanode
     depends_on:
       - hadoop-namenode
-    entrypoint: ["/bin/bash", "/entrypoint/datanode.sh"]
 
   hadoop-resourcemanager:
     <<: *hadoop-common
     container_name: hadoop-resourcemanager
+    command: resourcemanager
     expose:
-      - ${HADOOP_RESOURCEMANAGER_PORT:-8088}
+      # HADOOP_RESOURCEMANAGER_PORT
+      - 8088
     environment:
       SERVICE_PRECONDITION: "hadoop-namenode:9000 hadoop-namenode:9870 hadoop-datanode:9864"
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
-    entrypoint: ["/bin/bash", "/entrypoint/resourcemanager.sh"]
 
   hadoop-nodemanager:
     <<: *hadoop-common
     container_name: hadoop-nodemanager
+    command: nodemanager
     expose:
-      - ${HADOOP_NODEMANAGER_PORT:-8042}
+      # HADOOP_NODEMANAGER_PORT
+      - 8042
     environment:
       SERVICE_PRECONDITION: "hadoop-namenode:9000 hadoop-namenode:9870 hadoop-datanode:9864 hadoop-resourcemanager:8088"
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
       - hadoop-resourcemanager
-    entrypoint: ["/bin/bash", "/entrypoint/nodemanager.sh"]
 
   hadoop-historyserver:
     <<: *hadoop-common
     container_name: hadoop-historyserver
+    command: historyserver
     expose:
-      - ${HADOOP_HISTORYSERVER_PORT:-8188}
+      # HADOOP_HISTORYSERVER_PORT
+      - 8188
     environment:
       SERVICE_PRECONDITION: "hadoop-namenode:9000 hadoop-namenode:9870 hadoop-datanode:9864 hadoop-resourcemanager:8088"
     volumes:
       - type: bind
         source: /home/${USER}/Apps/hadoop-data/historyserver
-        target: ${YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path:-/hadoop/yarn/timeline}
+        # YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path
+        target: /hadoop/yarn/timeline
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
       - hadoop-resourcemanager
-    entrypoint: ["/bin/bash", "/entrypoint/historyserver.sh"]
 
 networks:
   main-overlay-network:
