--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -9,7 +9,7 @@ x-hadoop-common:
   #   dockerfile: base.Dockerfile
   networks:
     - main-overlay-network
-  env_file: ./hadoop.env
+  env_file: ${APPS_ENV}/hadoop.env
   restart: always
 
 services:
@@ -35,6 +35,10 @@ services:
         # HDFS_CONF_dfs_namenode_name_dir
         target: /hadoop/dfs/namenode
       - type: bind
+        source: ${APPS_LOGS}/hadoop/namenode
+        # HADOOP_LOG_DIR
+        target: /tmp/logs
+      - type: bind
         source: ${APPS_WORKSPACE}
         target: /workspace
 
@@ -52,6 +56,10 @@ services:
         source: ${APPS_DATA}/hadoop/datanode
         # HDFS_CONF_dfs_datanode_data_dir
         target: /hadoop/dfs/datanode
+      - type: bind
+        source: ${APPS_LOGS}/hadoop/datanode
+        # HADOOP_LOG_DIR
+        target: /tmp/logs
     depends_on:
       - hadoop-namenode
 
@@ -64,6 +72,11 @@ services:
       - 8088
     environment:
       SERVICE_PRECONDITION: "hadoop-namenode:9000 hadoop-namenode:9870 hadoop-datanode:9864"
+    volumes:
+      - type: bind
+        source: ${APPS_LOGS}/hadoop/resourcemanager
+        # HADOOP_LOG_DIR
+        target: /tmp/logs
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
@@ -79,9 +92,13 @@ services:
       SERVICE_PRECONDITION: "hadoop-namenode:9000 hadoop-namenode:9870 hadoop-datanode:9864 hadoop-resourcemanager:8088"
     volumes:
       - type: bind
-        source: ${APPS_LOGS}/hadoop/nodemanager
+        source: ${APPS_DATA}/hadoop/nodemanager
         # YARN_CONF_yarn_nodemanager_remote___app___log___dir
-        target: /tmp/logs/nodemanager
+        target: /hadoop/yarn/nodemanager
+      - type: bind
+        source: ${APPS_LOGS}/hadoop/nodemanager
+        # HADOOP_LOG_DIR
+        target: /tmp/logs
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
@@ -98,9 +115,13 @@ services:
       SERVICE_PRECONDITION: "hadoop-namenode:9000 hadoop-namenode:9870 hadoop-datanode:9864 hadoop-resourcemanager:8088"
     volumes:
       - type: bind
-        source: ${APPS_LOGS}/hadoop/historyserver
+        source: ${APPS_DATA}/hadoop/historyserver
         # YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path
         target: /hadoop/yarn/timeline
+      - type: bind
+        source: ${APPS_LOGS}/hadoop/historyserver
+        # HADOOP_LOG_DIR
+        target: /tmp/logs
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
