--- a/hadoop.env
+++ b/hadoop.env
@@ -46,7 +46,7 @@ YARN_CONF_yarn_timeline___service_leveldb___timeline___store_path=/hadoop/yarn/t
 YARN_CONF_yarn_resourcemanager_bind___host=0.0.0.0
 YARN_CONF_yarn_nodemanager_bind___host=0.0.0.0
 YARN_CONF_yarn_timeline___service_bind___host=0.0.0.0
-YARN_CONF_yarn_nodemanager_remote___app___log___dir=/tmp/logs/nodemanager
+YARN_CONF_yarn_nodemanager_remote___app___log___dir=/hadoop/yarn/nodemanager
 YARN_CONF_yarn_nodemanager_linux___container___executor_group=hadoop
 # mapred-site.xml
 MAPRED_CONF_mapreduce_framework_name=yarn
@@ -59,3 +59,6 @@ MAPRED_CONF_yarn_app_mapreduce_am_env="HADOOP_MAPRED_HOME=/opt/hadoop"
 MAPRED_CONF_mapreduce_map_env="HADOOP_MAPRED_HOME=/opt/hadoop"
 MAPRED_CONF_mapreduce_reduce_env="HADOOP_MAPRED_HOME=/opt/hadoop"
 MAPRED_CONF_yarn_nodemanager_bind___host=0.0.0.0
+# hadoop-env.sh
+HADOOP_LOG_DIR=/tmp/logs
+HADOOP_PID_DIR=/tmp/pids
