upgrading to version 3.3.4

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -9,7 +9,8 @@ x-hadoop-common:
   #   dockerfile: base.Dockerfile
   networks:
     - main-overlay-network
-  env_file: ${APPS_ENV}/hadoop.env
+  env_file: 
+    - ${APPS_ENV}/hadoop.env
   restart: always
 
 services:
