--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
   hadoop-namenode:
     <<: *hadoop-common
     container_name: hadoop-namenode
+    hostname: hadoop-namenode
     command: namenode
     environment:
       - CLUSTER_NAME=main
@@ -42,6 +43,7 @@ services:
   hadoop-datanode:
     <<: *hadoop-common
     container_name: hadoop-datanode
+    hostname: hadoop-datanode
     command: datanode
     expose:
       # HADOOP_DATANODE_PORT
@@ -59,6 +61,7 @@ services:
   hadoop-resourcemanager:
     <<: *hadoop-common
     container_name: hadoop-resourcemanager
+    hostname: hadoop-resourcemanager
     command: resourcemanager
     expose:
       # HADOOP_RESOURCEMANAGER_PORT
@@ -72,6 +75,7 @@ services:
   hadoop-nodemanager:
     <<: *hadoop-common
     container_name: hadoop-nodemanager
+    hostname: hadoop-nodemanager
     command: nodemanager
     expose:
       # HADOOP_NODEMANAGER_PORT
@@ -91,6 +95,7 @@ services:
   hadoop-historyserver:
     <<: *hadoop-common
     container_name: hadoop-historyserver
+    hostname: hadoop-historyserver
     command: historyserver
     expose:
       # HADOOP_HISTORYSERVER_PORT
