chore: add healthcheck setting

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -43,6 +43,12 @@ services:
       - type: bind
         source: ${APPS_WORKSPACE}
         target: /workspace
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "9000"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   hadoop-datanode:
     <<: *hadoop-common
@@ -65,6 +71,12 @@ services:
         target: /tmp/logs
     depends_on:
       - hadoop-namenode
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "9864"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   hadoop-resourcemanager:
     <<: *hadoop-common
@@ -84,6 +96,12 @@ services:
     depends_on:
       - hadoop-namenode
       - hadoop-datanode
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "8088"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   hadoop-nodemanager:
     <<: *hadoop-common
@@ -108,6 +126,12 @@ services:
       - hadoop-namenode
       - hadoop-datanode
       - hadoop-resourcemanager
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "8042"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   hadoop-historyserver:
     <<: *hadoop-common
@@ -132,6 +156,12 @@ services:
       - hadoop-namenode
       - hadoop-datanode
       - hadoop-resourcemanager
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "8188"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
 
 networks:
