feat: add label to restart unhealthy containers
When starting a willfarrell/autoheal container, unhealthy containers marked with the autoheal label will be automatically restarted.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ x-hadoop-common:
   #   context: .
   #   dockerfile: base.Dockerfile
   hostname: hadoop
+  labels:
+    autoheal: 'true'
   networks:
     - main-network
   env_file: ./hadoop.env
