--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -7,6 +7,8 @@ x-hadoop-common:
   # build:
   #   context: .
   #   dockerfile: base.Dockerfile
+  labels:
+    autoheal: 'true'
   networks:
     - main-overlay-network
   env_file: 
