--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -43,7 +43,7 @@ services:
         # HADOOP_LOG_DIR
         target: /tmp/logs
       - type: bind
-        source: ${APPS_WORKSPACE}
+        source: ${DATA}
         target: /workspace
     healthcheck:
       test: ["CMD", "nc", "-vz", "localhost", "9000"]
