--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -3,7 +3,7 @@ version: "3.8"
 
 x-hadoop-common:
   &hadoop-common
-  image: hadoop-base:3.3.4
+  image: hadoop-base:3.4.0
   # build:
   #   context: .
   #   dockerfile: base.Dockerfile
@@ -21,6 +21,7 @@ services:
     <<: *hadoop-common
     container_name: hadoop-namenode
     hostname: hadoop-namenode
+    # command: namenode -upgrade
     command: namenode
     environment:
       - CLUSTER_NAME=main
